hello-world/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: nginx-config-volume
          mountPath: /etc/nginx/conf.d/default.conf
          subPath: default.conf
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
      volumes:
      - name: nginx-config-volume
        configMap:
          name: nginx-config
          items:
          - key: default.conf
            path: default.conf
