hello-world/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
