hello-world/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`hello.dev.dev-denny.cloudns.be`)
    kind: Rule
    services:
    - name: hello
      port: 80
